[tool.poetry]
name = "lang-chain-fast-api"
version = "0.1.0"
description = ""
authors = ["Mitsuru Takeda <m.t.hagaren1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.4"
langchain = "^0.2.12"
pymilvus = "^2.4.4"
openai = "^1.37.2"
langchain-community = "^0.2.10"
langchain-milvus = "^0.1.3"
langchain-openai = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
